# superbank

./: .goreleaser.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  superbank.example.yaml
.github/workflows/: build-binaries.yml  goreleaser-config-check.yml  release.yml
crates/superbank/: Cargo.toml  README.md
crates/superbank-rpc/: Cargo.toml  README.md  build.rs
crates/superbank-rpc/src/: config.rs  server.rs  state.rs
crates/superbank-rpc/src/disk_cache/: index.rs  mod.rs
crates/superbank-rpc/src/handlers/: mod.rs  transactions.rs  types.rs
crates/superbank-rpc/src/rpc/: types.rs
crates/superbank-rpc/src/tests/: mod.rs
crates/superbank/src/: cli.rs  clickhouse.rs  main.rs  metrics.rs
crates/superbank/src/ingest/: fumarole.rs  grpc.rs  rpc.rs
deploy/k8s/: 31-superbank-ingest-grpc.yaml
docs/: development.md
