[package]
name = "superbank-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Optional in-memory "head cache" fed by a Yellowstone DragonsMouth gRPC stream via
# `yellowstone-block-machine`. This is intentionally non-default because it pulls in
# additional deps and (notably) `yellowstone-block-machine` is AGPL-3.0 licensed.
grpc-head-cache = [
    "dep:dashmap",
    "dep:yellowstone-block-machine",
    "dep:yellowstone-grpc-client",
    "dep:yellowstone-grpc-proto",
]
# RocksDB-backed cache of recent finalized slots served in place of ClickHouse.
# Requires `grpc-head-cache`: the DragonsMouth stream is the live ingestion source.
disk-cache = ["grpc-head-cache", "dep:rocksdb"]
pyroscope = ["dep:pyroscope", "dep:pyroscope_pprofrs"]
grpc-streaming = [
    "dep:async-stream",
    "dep:prost",
    "dep:tonic",
    "dep:tonic-prost",
    "dep:tonic-prost-build",
    "dep:tokio-stream",
]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonrpc-core = "18.0.0"
bincode = "1.3.3"
serde_bytes = "0.11"
serde-big-array = "0.5"
solana-commitment-config = "3.0.0"
solana-rpc-client-api = "4.0.0-rc.0"
solana-rpc-client-types = "4.0.0-rc.0"
solana-account-decoder-client-types = "4.0.0-rc.0"
solana-clock = "3.0.0"
solana-sdk = "3.0"
solana-transaction-context = "4.0.0-rc.0"
solana-transaction-status = { version = "4.0.0-rc.0", features = ["agave-unstable-api"] }
thiserror = "2.0.11"
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5", features = ["limit", "util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2.0"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
once_cell = "1.20"
prometheus-client = "0.23.1"
prometheus-client-derive-encode = "0.4.2"
kubert-prometheus-process = "0.2.3"
clickhouse = { version = "0.14", features = ["inserter"] }
clickhouse-rs = "1.1.0-alpha.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
async-stream = { version = "0.3", optional = true }
bs58 = "0.5"
hex = "0.4"
ch_cityhash102 = "0.1"
prost = { version = "0.14.3", optional = true }
tonic = { version = "0.14.5", optional = true }
tonic-prost = { version = "0.14.5", optional = true }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
dashmap = { version = "6.1.0", optional = true }
rocksdb = { version = "0.24", optional = true, default-features = false, features = [
    "lz4",
    "zstd",
    "multi-threaded-cf",
    "bindgen-runtime",
] }
pyroscope = { version = "0.5.8", optional = true }
pyroscope_pprofrs = { version = "0.2.10", optional = true }
yellowstone-block-machine = { version = "0.8.0", features = ["dragonsmouth"], optional = true }
yellowstone-grpc-client = { version = "13.1.0", optional = true }
yellowstone-grpc-proto = { version = "12.3.0", optional = true }

[dev-dependencies]
base64 = "0.22"
tempfile = "3"

[build-dependencies]
tonic-prost-build = { version = "0.14.5", optional = true }

[package.metadata.cargo-machete]
ignored = ["tonic-prost"]

[[bin]]
name = "superbank-rpc"
path = "src/main.rs"
