[package]
name = "superbank"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.8"
blake3 = "1.5.5"
bs58 = "0.5"
base64 = "0.22.1"
clickhouse = { version = "0.14" }
clap = { version = "4.5.40", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
once_cell = "1.21.3"
prometheus-client = "0.23.1"
prometheus-client-derive-encode = "0.4.2"
kubert-prometheus-process = "0.2.3"
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5"
serde_bytes = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = "0.12"
solana-commitment-config = "3.0.0"
solana-message = { version = "3.1.0", features = ["serde"] }
solana-rpc-client = "4.0.0-rc.0"
solana-rpc-client-api = "4.0.0-rc.0"
solana-rpc-client-types = "4.0.0-rc.0"
solana-storage-bigtable = { version = "4.0.0-rc.0", features = ["agave-unstable-api"] }
solana-signature = "3.4.0"
solana-transaction = { version = "3.1.0", features = ["serde"] }
solana-transaction-error = { version = "3.2.0", features = ["serde", "wincode"] }
solana-transaction-status = "4.0.0-rc.0"
solana-transaction-status-client-types = "4.0.0-rc.0"
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.14.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yellowstone-fumarole-client = "0.5.0"
yellowstone-grpc-client = "13.1.0"
yellowstone-grpc-proto = "12.3.0"
wincode = { version = "0.2.5", features = ["derive", "solana-short-vec"] }
wincode05 = { package = "wincode", version = "0.5.0" }

[dev-dependencies]
solana-address = "1.1.0"
solana-hash = "4.3.0"
